--- a/demo.html
+++ b/demo.html
@@ -15,7 +15,7 @@
     name: '幽鬼兔',
     _id: '59438930',
     type: 'monster',
-    type2: 'cl',
+    type2: 'xg',
     type3: '',
     type4: '',
     attack: 0,
@@ -27,6 +27,6 @@
     attribute: 'dark'
   };
 
-  let card = new Card({ cardData, canvas, size: [200, 292], lang: 'cn'});
+  let card = new Card({ cardData, canvas, size: [400, 584], lang: 'cn'});
 </script>
 </html>
