--- a/demo.html
+++ b/demo.html
@@ -15,7 +15,7 @@
     name: '幽鬼兔',
     _id: '59438930',
     type: 'monster',
-    type2: 'xg',
+    type2: 'lj',
     type3: '',
     type4: '',
     attack: 0,
