--- a/demo.html
+++ b/demo.html
@@ -11,11 +11,11 @@
   import Card from './source/card.js';
 
   let canvas = document.getElementById('card');
-  let cardData = {
+  let data = {
     name: '幽鬼兔',
     _id: '59438930',
     type: 'monster',
-    type2: 'lj',
+    type2: 'xg',
     type3: '',
     type4: '',
     attack: 0,
@@ -27,6 +27,8 @@
     attribute: 'dark'
   };
 
-  let card = new Card({ cardData, canvas, size: [400, 584], lang: 'cn'});
+  let card = new Card({ data, canvas, size: [400, 584], lang: 'cn'});
+  card.data.name = '1212';
+  card.data.name = '12312'
 </script>
 </html>
