--- a/demo.html
+++ b/demo.html
@@ -28,7 +28,6 @@
   };
 
   let card = new Card({ data, canvas, size: [400, 584], lang: 'cn'});
-  card.data.name = '1212';
-  card.data.name = '12312'
+  card.render();
 </script>
 </html>
