--- a/demo.html
+++ b/demo.html
@@ -27,7 +27,7 @@
     attribute: 'dark'
   };
 
-  let card = new Card({ data, canvas, size: [400, 584], lang: 'cn'});
+  let card = new Card({ data, canvas, size: [400, 584], moldPath: './source/mold'});
   
   card.render();
 </script>
