--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
     <title>DEMO</title>
 </head>
 <body>
-  <canvas id="card"></canvas>
+  <canvas id="card" style="width: 50%;"></canvas>
 </body>
 <script type="module">
   import Card from './source/card.js';
