--- a/demo.html
+++ b/demo.html
@@ -7,9 +7,8 @@
 <body>
   <canvas id="card" style="width: 50%;"></canvas>
 </body>
+<script src="./dist/card.js"></script>
 <script type="module">
-  import Card from './source/card.js';
-
   let canvas = document.getElementById('card');
   let data = {
     name: '幽鬼兔',
@@ -27,7 +26,7 @@
     attribute: 'dark'
   };
 
-  let card = new Card({ data, canvas, size: [400, 584], moldPath: './source/mold'});
+  let card = new Card({ data, canvas, size: [400, 584], moldPath: './dist/mold'});
   
   card.render();
 </script>
