--- a/demo.html
+++ b/demo.html
@@ -26,7 +26,7 @@
     attribute: 'dark'
   };
 
-  let card = new Card({ data, canvas, size: [400, 584], moldPath: './dist/mold'});
+  let card = new Card({ data, canvas, moldPath: './dist/mold'});
   
   card.render();
 </script>
