--- a/demo.html
+++ b/demo.html
@@ -13,8 +13,8 @@
   let data = {
     name: '幽鬼兔',
     _id: '59438930',
-    type: 'monster',
-    type2: 'xg',
+    type: 'spell',
+    type2: 'tc',
     type3: '',
     type4: '',
     attack: 0,
