--- a/demo.html
+++ b/demo.html
@@ -13,9 +13,9 @@
   let data = {
     name: '幽鬼兔',
     _id: '59438930',
-    type: 'spell',
-    type2: 'tc',
-    type3: '',
+    type: 'monster',
+    type2: 'xg',
+    type3: 'tz',
     type4: '',
     attack: 0,
     defend: 1800,
