--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
     <title>DEMO</title>
 </head>
 <body>
-  <canvas id="card" style="width: 50%;"></canvas>
+  <canvas id="card" style="height: 90vh;"></canvas>
 </body>
 <script src="./dist/card.js"></script>
 <script type="module">
