1. Fix description linebreaker for lb+rh/tt/cl monster 2. Support customized race 3. Update demo.html

--- a/demo.html
+++ b/demo.html
@@ -7,24 +7,26 @@
 <body>
   <canvas id="card" style="height: 90vh;"></canvas>
 </body>
-<script src="./dist/card.js"></script>
+<script src="./dist/index.js"></script>
 <script>
   const canvas = document.getElementById('card');
   const data = {
-    name: '幽鬼兔',
-    _id: '59438930',
-    type: 'monster',
-    type2: 'xg',
-    type3: 'tz',
-    type4: '',
-    attack: 0,
-    defend: 1800,
-    level: 3,
-    desc: '「浮幽櫻」的效果1回合只能使用1次。\n' +
-      '①：對方場上的怪獸數量比自己場上的怪獸多的場合，把這張卡從手卡丟棄才能發動。選自己的額外卡組1張卡給雙方確認。那之後，把對方的額外卡組確認，有選的卡的同名卡的場合，那些對方的同名卡全部除外。這個效果在對方回合也能發動。',
-    race: '不死族',
-    attribute: 'dark'
-  };
+  _id: '35952884',
+  name: '流天类星龙',
+  type: 'monster',
+  type2: 'tt',
+  type3: '',
+  type4: '',
+  attack: 4000,
+  defend: 4000,
+  race: 'dragon',
+  level: 12,
+  attribute: 'light',
+  desc: '同调怪兽调整＋调整以外的同调怪兽2只以上\r\n' +
+    '这张卡不用同调召唤不能特殊召唤。①：这张卡在同1次的战斗阶段中可以作出最多有那些作为同调素材的怪兽之内除调整以外的怪兽数量的攻击。②：1回合1次，魔法·陷阱·怪兽的效果发动时才能发动。那个发动无效并破坏。③：表侧表示的这张卡从场上离开时才能发动。从额外卡组把1只「流星龙」特殊召唤。',
+  lb_num: undefined,
+  lb_desc: undefined
+};
 
   const card = new Card({ data, canvas, moldPath: './dist/mold'});
   
